Revert "Extract live-resize related code in `MetalRedrawer.kt` into `MetalLiveResize`"
This reverts commit beaa4eafa1fd76972edf88790570649e18604e38.