@@ -2,8 +2,10 @@ package org.jetbrains.skiko.redrawer
 
 import kotlinx.coroutines.*
 import kotlinx.coroutines.channels.Channel
+import org.jetbrains.skia.ISize
 import org.jetbrains.skiko.*
 import org.jetbrains.skiko.context.MetalContextHandler
+import java.awt.Component
 import java.awt.Dimension
 import java.util.concurrent.atomic.AtomicBoolean
 import javax.swing.SwingUtilities.*
@@ -38,7 +40,7 @@ internal class MetalRedrawer(
     analytics: SkiaLayerAnalytics,
     properties: SkiaLayerProperties
 ) : AWTRedrawer(layer, analytics, GraphicsApi.METAL) {
-    val contextHandler: MetalContextHandler
+    private val contextHandler: MetalContextHandler
 
     companion object {
         init {
@@ -46,7 +48,7 @@ internal class MetalRedrawer(
         }
     }
 
-    var drawLock = Any()
+    private var drawLock = Any()
 
     /**
      * [MetalDevice] initialized for given [layer] or null if [MetalRedrawer] is disposed,
@@ -68,10 +70,10 @@ internal class MetalRedrawer(
     @Volatile private var isWindowOccluded = false
 
     /**
-     * Handles the interactive (edge-drag) live-resize path. Registered with the native device so it can
-     * receive the live-resize upcalls; see [MetalLiveResize].
+     * Whether the window is in live-resize mode.
      */
-    private val liveResize = MetalLiveResize(redrawer = this, layer = layer)
+    @Volatile
+    private var isInLiveResize: Boolean = false
 
     init {
         onDeviceChosen(adapter.name)
@@ -86,8 +88,7 @@ internal class MetalRedrawer(
                     platformInfo = it,
                     // Live resize is driven from the window, so only enable it when this layer covers the whole
                     // window. When embedded as a Swing component (fillsWindow = false), fall back to the legacy path.
-                    liveResizeEnabled = layer.fillsWindow && SkikoProperties.metalSynchronousLiveResize,
-                    liveResize = liveResize
+                    liveResizeEnabled = layer.fillsWindow && SkikoProperties.metalSynchronousLiveResize
                 )
             )
         }
@@ -116,11 +117,11 @@ internal class MetalRedrawer(
 
     override fun needRender(throttledToVsync: Boolean) {
         checkDisposed()
-        if (liveResize.isActive) {
+        if (isInLiveResize) {
             // The background frame loop is gated off during a resize (two presenters deadlock / starve
             // the drawable pool), so drive animation frames from the AppKit main thread instead — the
             // same single serialized presenter that setBounds uses.
-            liveResize.scheduleFrame()
+            scheduleFrameOnAppKitThread()
         } else {
             frameDispatcher.scheduleFrame(needUpdate = true, throttledToVsync = throttledToVsync)
         }
@@ -171,7 +172,7 @@ internal class MetalRedrawer(
         windowOcclusionStateChannel.trySend(isOccluded)
     }
 
-    fun LayerDrawScope.performDraw(finishFrame: Boolean = true) {
+    private fun LayerDrawScope.performDraw(finishFrame: Boolean = true) {
         synchronized(drawLock) {
             if (!isDisposed) {
                 autoreleasepool {
@@ -184,50 +185,21 @@ internal class MetalRedrawer(
         }
     }
 
-    override fun onPlatformComponentResized() {
-        // During live resize, the layer tells us its size directly; the AWT size is not in sync
-        if (!liveResize.isActive) {
-            super.onPlatformComponentResized()
-        }
+    /**
+     * Called from native code, on the AppKit main thread, when a live resizing session starts.
+     */
+    @Suppress("unused")
+    fun onLiveResizeStarted() {
+        isInLiveResize = true
+        scheduleFrameOnAppKitThread()
     }
 
     /**
-     * The native device pointer, or `null` if the redrawer is disposed.
-     *
-     * Used by [MetalLiveResize] to schedule frames on the AppKit main thread only while the device is alive.
+     * Called from native code, on the AppKit main thread, when a live resizing session ends.
      */
-    internal val liveResizeDevicePtr: Long?
-        get() = if (isDisposed) null else device.ptr
-
-    /**
-     * Records a live-resize frame at [size] on the AWT event thread (called by [MetalLiveResize] from inside
-     * its EDT hop). Only records; the present is deferred to [presentLiveResizeFrame] on the AppKit main
-     * thread so it can join the window's resize transaction.
-     */
-    internal fun recordLiveResizeFrame(size: Dimension) {
-        update(forcedSize = size)
-        inDrawScope(forcedSize = size) {
-            if (!isDisposed) {
-                performDraw(finishFrame = false)
-            }
-        }
-    }
-
-    /**
-     * Presents the previously [recorded][recordLiveResizeFrame] live-resize frame. Must run on the AppKit
-     * main thread so the present joins the resize transaction (see `finishFrameInLiveResize`).
-     */
-    internal fun presentLiveResizeFrame() = synchronized(drawLock) {
-        if (!isDisposed) {
-            contextHandler.finishFrameInLiveResize()
-        }
-    }
-
-    /**
-     * Requests a normal (background-loop) render once a live resize has ended. Posted to the EDT because the
-     * live-resize end notification arrives on the AppKit main thread.
-     */
-    internal fun requestRenderAfterLiveResize() {
+    @Suppress("unused")
+    fun onLiveResizeEnded() {
+        isInLiveResize = false
         invokeLater {
             if (!isDisposed) {
                 needRender(throttledToVsync = false)
@@ -235,9 +207,60 @@ internal class MetalRedrawer(
         }
     }
 
+    override fun onPlatformComponentResized() {
+        // During live resize, the layer tells us its size directly; the AWT size is not in sync
+        if (!isInLiveResize) {
+            super.onPlatformComponentResized()
+        }
+    }
+
+    /**
+     * Called from native code, on the AppKit main thread, to draw a frame during live resize.
+     */
+    @Suppress("unused")
+    fun drawFrameWhileLiveResizing(width: Int, height: Int) {
+        if (isDisposed || width <= 0 || height <= 0) return
+
+        // Record content at exactly the present size, on the EDT.
+        try {
+            invokeOnEventThreadAndWait {
+                val layerSize = Dimension(width, height)
+                update(forcedSize = layerSize)
+                inDrawScope(forcedSize = layerSize) {
+                    if (!isDisposed) {
+                        // The present must run on the AppKit main thread to join the resize transaction, so
+                        // only record here; `finishFrameInLiveResize` presents below on the AppKit main thread
+                        performDraw(finishFrame = false)
+                    }
+                }
+            }
+        } catch (e: Exception) {
+            Logger.warn(e) { "Failed to record live-resize frame" }
+            return
+        }
+
+        // The present must run on the AppKit main thread to join the resize transaction
+        synchronized(drawLock) {
+            if (!isDisposed) {
+                contextHandler.finishFrameInLiveResize()
+            }
+        }
+    }
+
+    /**
+     * Requests one frame on the AppKit main thread (during a live resize).
+     *
+     * Coalescing (at most one pending frame) lives natively in `scheduleFrameOnAppKitThread`, which hops to the
+     * main queue and calls back into [drawFrameWhileLiveResizing], where the frame is rendered and presented.
+     */
+    private fun scheduleFrameOnAppKitThread() {
+        if (isDisposed) return
+        scheduleFrameOnAppKitThread(device.ptr)
+    }
+
     override fun syncBoundsFromPlatformComponent() = synchronized(drawLock) {
         check(isEventDispatchThread()) { "Method should be called from AWT event dispatch thread" }
-        if (liveResize.isActive) return
+        if (isInLiveResize) return
 
         val rootPane = getRootPane(layer)
         val globalPosition = convertPoint(layer.backedLayer, 0, 0, rootPane)
@@ -255,11 +278,32 @@ internal class MetalRedrawer(
         setLayerVisible(device.ptr, isVisible)
     }
 
-    private external fun createMetalDevice(window: Long, transparency: Boolean, frameBuffering: Int, adapter: Long, platformInfo: Long, liveResizeEnabled: Boolean, liveResize: MetalLiveResize): Long
+    private external fun createMetalDevice(window: Long, transparency: Boolean, frameBuffering: Int, adapter: Long, platformInfo: Long, liveResizeEnabled: Boolean): Long
     private external fun disposeDevice(device: Long)
     private external fun resizeLayers(device: Long, x: Int, y: Int, width: Int, height: Int)
     private external fun setLayerVisible(device: Long, isVisible: Boolean)
     private external fun setContentScale(device: Long, contentScale: Float)
+
+    /**
+     * Hops to the AppKit main thread (main dispatch queue) and calls back into [drawFrameWhileLiveResizing] with
+     * the layer's current pixel size. Used to drive frames through the single main-thread presenter during
+     * a live resize.
+     */
+    private external fun scheduleFrameOnAppKitThread(device: Long)
+
+    /**
+     * Like [javax.swing.SwingUtilities.invokeAndWait], but keeps the AppKit run loop spinning while waiting, so
+     * synchronous Java->AppKit calls made from [runnable] are serviced rather than deadlocking.
+     * [component] provides the AWT context for the call.
+     *
+     * This is done via `LWCToolkit.invokeAndWait`. `LWCToolkit` lives in a non-exported JDK package, but JNI is not
+     * subject to module access checks, so this needs no `--add-opens`.
+     */
+    private external fun invokeOnEventThreadAndWait(runnable: Runnable, component: Component)
+
+    private fun invokeOnEventThreadAndWait(runnable: Runnable) {
+        invokeOnEventThreadAndWait(runnable, layer)
+    }
 
     /**
      * Set this value to true to synchronize the presentation of the layer’s contents with the display’s refresh,
@@ -281,13 +325,13 @@ internal class MetalRedrawer(
 
         private val updateDispatcher = FrameDispatcher(MainUIDispatcher) {
             // Gated off during a live resize: presentation is driven from the AppKit main thread
-            if (layer.isShowing && !liveResize.isActive) {
+            if (layer.isShowing && !isInLiveResize) {
                 updateIfRequested()
             }
         }
 
         private val frameDispatcher = FrameDispatcher(MainUIDispatcher) {
-            if (layer.isShowing && !liveResize.isActive) {
+            if (layer.isShowing && !isInLiveResize) {
                 updateIfRequested()
                 draw()
             }
